# i2c

./: .gitignore  CMakeLists.txt  clean.sh
include/: client.h  clock.h  components.h  host.h
src/: main.c
src/client/: client.c  client_test.cc
src/clock/: clock.c
src/components/: component.c  components_test.cc
src/host/: host.c  host_test.cc
